Closed Bug 1001662 Opened 10 years ago Closed 10 years ago

Off-Main-Thread-Compiled XUL Scripts get compiled in the scope of the SafeJSContext

Categories

(Core :: DOM: Core & HTML, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: bholley, Assigned: bholley)

References

Details

(Keywords: regression)

Attachments

(1 file)

This is a regression from bug 993438. This might cause weird things to happen, so we should avoid shipping it.

1-line fix coming right up.
Blocks: 1001198
(Note that I'm introducing an assert against this kind of behavior in bug 1001198, which should serve as implicit  test coverage).
Attachment #8412947 - Flags: review?(wmccloskey) → review+
https://hg.mozilla.org/mozilla-central/rev/1db547d439de
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.