Bug 1001662 - Enter the compilation scope before retrieving off-main-thread-compiled scripts. r=billm